<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_incubation"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/incubation_settings" />
    <item
        android:id="@+id/nav_motor"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/motor_settings" />
    <item
        android:id="@+id/nav_pid"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/pid_settings" />
    <item
        android:id="@+id/nav_calibration"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/calibration_settings" />
    <item
        android:id="@+id/nav_alarm"
        android:icon="@android:drawable/ic_dialog_alert"
        android:title="@string/alarm_settings" />
</menu>